# cimd

./: .copier-answers.env  .copier-answers.yml  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README-public.md  README.md  Taskfile.yaml  pyproject.toml
.github/workflows/: check.yml  docker.yml  publish.yml
cimd/: __init__.py  callbacks.py  cli.py
cimd/classes/: __init__.py  context.py  metadata.py  shields_link.py
cimd/commands/: __init__.py  add.py  delete.py  get.py  list.py
cimd/commands/extend/: __init__.py  gitlab_link.py
cimd/commands/extract/: __init__.py  coverage_xml.py  junit_xml.py  pipeline_logs.py  trivy_scans.py
cimd/commands/scratch/: __init__.py  pipeline_logs.py
docs/: example.json
js/: userscript.js
schema/: Taskfile.yml  schema.json
schema/fails/: fails-structure-item-key.json  fails-structure-top-element.json  fails-value-http-url.json  fails-value-no-string.json
tests/: __init__.py  conftest.py  test_crud.py  test_extend_gitlab_link.py  test_extract_coverage_xml.py  test_extract_junit_xml.py  test_extract_pipeline_logs.py  test_extract_trivy_scan.py  test_shields_link.py
tests/fixtures/coverage-xml/: coverage.xml
tests/fixtures/junit/: junit-pytest.xml
tests/fixtures/trivy-scan/: __metadata__.json  debian:bullseye-20240926-slim.json  seebi:cimd.json
